--- a/Source/collaborative-music-player/src/main/resources/root/css/global-stylesheet.css
+++ b/Source/collaborative-music-player/src/main/resources/root/css/global-stylesheet.css
@@ -1,4 +1,4 @@
-body { 
+body {
 	padding-top: 70px;
 }
 
@@ -15,6 +15,61 @@ body {
 }
 
 .form-search {
-	margin-left: 30px;
+	margin-right: 30px;
 	width: 20%;
+	clear: right;
+}
+
+.profile-card {
+
+}
+
+div .sidebar {
+	float: right;
+	min-height: 100%;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-right: 1px solid #eee;
+}
+
+/* Activity feed from http://bootsnipp.com/snippets/7QXrr */
+.activity-feed {
+  padding: 15px;
+}
+.activity-feed .feed-item {
+  position: relative;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  border-left: 2px solid #e4e8eb;
+}
+.activity-feed .feed-item:last-child {
+  border-color: transparent;
+}
+.activity-feed .feed-item:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -6px;
+  width: 10px;
+  height: 10px;
+  border-radius: 6px;
+  background: #fff;
+  border: 1px solid #f37167;
+}
+.activity-feed .feed-item .date {
+  position: relative;
+  top: -5px;
+  color: #8c96a3;
+  text-transform: uppercase;
+  font-size: 13px;
+}
+.activity-feed .feed-item .text {
+  position: relative;
+  top: -3px;
+}
+
+.youtubePlayer {
+	margin-top: 10px;
+	margin-left: 10px;
 }
